			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * CLEANUP: some errors reported by the valgrind tool.


VERSION 5.3.10 (Apr 29, 2004)
=============================

  * FIXED: import warning on $derived_source/3.  Mike Elston.

  * FIXED: numbervars option of the write predicates.  Steve Moyle.

  * Provided limited stack trace for errors during GC.

  * FIXED: throw/1 throwing a single variable if the exception is not
    caught (Roberto Bagnara)

  * ADDED: PL_is_ground() to check for term groundness in the foreign
    interface.

  * ENHANCED: error messages produced by load_foreign_library/1.

  * MAINTENANCE: Fixed incorrect assertion in O_SECURE mode.  Barry Evans.

  * ENHANCED: some Makefile cleanup.  Fixed typo spotted by Tom Schrijvers.

  * PORT: Cleanup of autoconf configuration (dropped acconfig.h)

  * ENHANCED: Exploit GCC visibility("hidden") attribute.  Improves symbol
    handling for embedded applications on ELF-based systems.


VERSION 5.3.9 (Apr 15, 2004)
============================

  * MODIFIED: the library for embedded linking has been moved from
    runtime/$ARCH to lib/$ARCH.  Installation scripts using plld work
    without modification, but hand-crafted building of embedded executables
    must be adapted.

  * ADDED: configure option --enable-shared to create the Prolog kernel
    as a shared object.  Works on ELF based systems using the GNU toolchain.
    MODOFIED: configure option --disable-shared is renamed to
    --disable-load-foreign.

  * FIXED: Renamed corouting --> coroutining (Joachim Schimpf).

  * FIXED: debug/nondebug issues with multifile predicates (causing
    gtrace/0 to trace itself).  David Reitter.

  * MODIFIED: listing/1 throws exception if the target cannot be